tests/urmoac/errors/net_issues/edge_length_0/errors.urmoac
Error: Edge '10000' has a length of 0.
The network could not be loaded
Quitting on error...
